install(FILES org.tahoma2d.Tahoma2D.metainfo.xml org.tahoma2d.Tahoma2D.appdata.xml DESTINATION share/metainfo)
install(FILES org.tahoma2d.Tahoma2D.desktop DESTINATION share/applications)
install(FILES tahoma2d_logo_128.png DESTINATION share/icons/hicolor/128x128/apps RENAME org.tahoma2d.Tahoma2D.png)
install(FILES tahoma2d_logo_256.png DESTINATION share/icons/hicolor/256x256/apps RENAME org.tahoma2d.Tahoma2D.png)
